--- a/platformio.ini
+++ b/platformio.ini
@@ -11,4 +11,15 @@
 [env:uno]
 platform = atmelavr
 board = uno
+;[env:megaatmega2560]
+;platform = atmelavr
+;board = megaatmega2560
 framework = arduino
+lib_deps = 
+	forntoh/LcdMenu@^5.11.1
+	mike-matera/ArduinoSTL@^1.3.3
+    arduino-libraries/LiquidCrystal@^1.0.7
+;	jdolinay/avr-debugger@^1.5
+;debug_tool = avr-stub
+;debug_port = COM4
+
