added debugger interface, removed serial line communication

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ lib_deps =
 	forntoh/LcdMenu@^5.11.1
 	mike-matera/ArduinoSTL@^1.3.3
     arduino-libraries/LiquidCrystal@^1.0.7
-;	jdolinay/avr-debugger@^1.5
-;debug_tool = avr-stub
-;debug_port = COM4
+	jdolinay/avr-debugger@^1.5
+debug_tool = avr-stub
+debug_port = COM4
 
